--- a/srv/index.html
+++ b/srv/index.html
@@ -2,12 +2,16 @@
 <!--http://jsfiddle.net/ScF6c/5/-->
 <html>
     <head>
-        <script type="text/javascript" src="hex.js">
+        <script type="text/javascript" src="kinetic-v3.8.3.js">
+        </script>
+        <script type="text/javascript" src="kinhex.js">
         </script>
     </head>
     <body>
-        <canvas id="myCanvas" width="578" height="300" style="border:1px 
+        <!--<canvas id="myCanvas" width="578" height="300" style="border:1px 
         dashed red;margin:auto">
-        </canvas>
+        </canvas>-->
+        <div id="container">
+        </div>
     </body>
 </html>
