Hexes change colors when clicked

--- a/srv/index.html
+++ b/srv/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <div id="kstage">
+            <!-- we'll put a 600px by 600px canvas here -->
         </div>
         <div id="location">
             <h1 id="docy">foo</h1>
